tests/fixtures/errors/condition_not_bool.z
# E0100: an if-condition must be bool. A resultval (from a lossy conversion)
# used directly as a condition is a type error rather than invalid C.
main: function is {
    big: 999.u64
    if big.u32 then print "x"
}
